Fix slider overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
     overflow-y: scroll;
     scrollbar-width: none;
     &::-webkit-scrollbar {
